# forest_fire_detection_system

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODOs.md  compile_commands.json  package.xml
config/: H20T_Camera.yaml  H20T_IR_Camera.yaml  ZigzagPathShape.yaml
document/: single_fire_detecting_system.drawio
include/app/single_fire_point_task/: SingleFirePointTaskManager.hpp
include/common/: CommonTypes.hpp  PathPlannerBase.hpp  WpV2Operator.hpp
include/modules/BasicController/: ControllerBase.hpp  IncPIDController.hpp  PIDController.hpp
include/modules/GimbalCameraController/: GimbalCameraController.hpp
include/modules/GimbalCameraOperator/: GimbalCameraOperator.hpp
include/modules/ImgVideoOperator/: RGB_IRSeperator.hpp
include/modules/PathPlanner/: PathPlannerBase.hpp  ZigzagPathPlanner.hpp
include/modules/WayPointOperator/: WpV2Operator.hpp
include/single_fire_point_task/: single_fire_point_task_manager.hpp
include/single_fire_point_task/modules/: ZigzagPathPlanner.hpp
include/test/: test_WpV2Operator.h  test_WpV2Operator.hpp  test_simple_command.hpp
include/tools/: GoogleEarthPath.hpp  MathLib.hpp  SystemLib.hpp
include/tools/PrintControl/: PrintControl.hpp  PrintCtrlImp.h  TODO.md
launch/: record_the_orginal_video.launch  start_detecting.launch
msg/: SingleFireFuse.msg  SingleFireIR.msg  SingleFirePosIR.msg  SingleFireRGB.msg
scripts/: .gitignore  CMakeLists.txt  alunetseg.ipynb  datasettry000.py  fastaiunetdata000.py  fastaiunetload000.py  fastaiunettraning000.py  fastaiunetutils000.py  trainningtry000.py  try000.py  try001.py  unetdata000.py  unetfastai000.py  unetmodel000.py  unettraining000.py  unetutils000.py
scripts/app/single_fire_point_task/: fire_smoke_resnet_classifier.py
scripts/classifier/: resnet34_model.py
scripts/develop/: TestPIL.py  pub_local_video.py  test_cv_bridge.py  toggle_local_camera.py
scripts/develop/UnetLightModel/: DeFireModel.py  FireModel.py  LightUnetData.py  LightUnetLoad.py  LightUnetModel.py  LightUnetTraning.py  LightUnetUtils.py
scripts/develop/UnetModel/: fastaiunetdata000.py  fastaiunetload000.py  fastaiunetmodel000.py  fastaiunettraning000.py  fastaiunetvideo.py
scripts/develop/classifier/: resnet34_data.py  resnet34_inference.py  resnet34_model.py  resnet34_train.py  resnet34_utils.py
scripts/develop/datas/NAVlab_smoke_database/: convert_label_2_binary.py  json_2_mask.sh
scripts/develop/datas/Smoke_segmentation/: convert_label_2_binary.py
scripts/develop/semantic_segmentation_unet/: load_test.py  load_video.py  train.py
scripts/develop/thermal_segmentation/: thermal_segmentation.py
scripts/develop/unetlight/: unetfastai000.py  unetlight000.py
scripts/develop/unettry/: fastaiunetmodel000.py  hubeload.py  try001.py
scripts/develop/workingEG/: alunetseg.ipynb  unetmodel000.py  unettraining000.py
scripts/modules/thermal_img_segmentation/: find_potential_fire_IR.py
scripts/modules/thermal_segmentation/: find_potential_fire_IR.py  seperate_original_image.py
scripts/modules/unet_smoke_segmentation/: detection_fire_smoke.py
scripts/modules/unet_smoke_segmentation/UnetDetModel/: GenerateTrt.py  UnetModel.py
scripts/modules/vehicle_ultis/: seperate_original_image.py
scripts/notebook/: DONEtryfireclaassifier.ipynb
scripts/simplifying/: unetlight000.py  unetlightdata000.py  unetlightutils000.py  unettiny.py  unetutils000.py
scripts/test/: TestPIL.py  detection.py  fastaiunetdata000.py  fastaiunetload000.py  fastaiunetmodel000.py  fastaiunettraning000.py  fastaiunetutils000.py  get_camera_rgb.py  pub_camera.py  pub_local_video.py  test_cv_bridge.py
scripts/test/UnetModel/: fastaiunetmodel000.py
scripts/tools/: Tensor_CV2.py  find_img_boundary.py
scripts/tools/ir_rgb_alian/1/: cal.py
scripts/unetlight/: unetlight000.py  unetlighttraining000.py
scripts/unetsimplified/: unetlight000.py  unetlighttraining000.py  unetlightutils000.py
scripts/unettry/: detection.py  resnetbasedunet000.py
scripts/vision/: detection.py  detection_fire_smoke.py  get_camera_rgb.py  mask_video.avi  toggle_vechile_camera.py
scripts/vision/UnetDetModel/: GenerateTrt.py  UnetModel.py
scripts/workingEG/: alunetseg.ipynb  unetutils000.py
shun_test/: DeFireModel.py  FireModel.py  LightUnetModel.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/single_fire_point_task/: SingleFirePointTaskManager.cpp  TODOs.md
src/common/: CMakeLists.txt  WpV2Operator.cpp
src/modules/: CMakeLists.txt
src/modules/GimbalCameraOperator/: GimbalCameraOperator.cpp
src/modules/ImgVideoOperator/: RGB_IRSeperator.cpp
src/modules/PathPlanner/: ZigzagPathPlanner.cpp
src/modules/WayPointOperator/: WpV2Operator.cpp
src/navigation/: joystick_control.cpp
src/single_fire_point_task/: CMakeLists.txt  SingleFirePointTaskManager.cpp  TODOs.md  single_fire_point_task_manager.cpp
src/single_fire_point_task/modules/: ZigzagPathPlanner.cpp
src/test/: CMakeLists.txt  get_camera_pub.cpp  test_GimbalCameraOperator.cpp  test_WpV2Operator.cpp  test_getParam.cpp  test_simple_command.cpp  test_zigzag_planner.cpp
src/tools/: AlianRGB_IR.cpp  CMakeLists.txt  ToggleVehicleVideo.cpp
srv/: RotateGimbal.srv
